load("//bazel:zkx_cc.bzl", "zkx_cc_library")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "affine_map_evaluator",
    srcs = ["affine_map_evaluator.cc"],
    hdrs = ["affine_map_evaluator.h"],
    deps = [
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/types:span",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Support",
    ],
)

zkx_cc_library(
    name = "coalescing_analysis",
    srcs = ["coalescing_analysis.cc"],
    hdrs = ["coalescing_analysis.h"],
    deps = [
        ":affine_map_evaluator",
        "//zkx:shape_util",
        "//zkx:util",
        "//zkx:zkx_data_cc_proto",
        "//zkx/backends/gpu/codegen:fusion_emitter",
        "//zkx/hlo/analysis:indexing_analysis",
        "//zkx/hlo/analysis:indexing_map",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/utils:hlo_traversal",
        "//zkx/service/gpu:gpu_fusible",
        "//zkx/service/gpu:hlo_fusion_analysis",
        "//zkx/stream_executor:device_description",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/types:span",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Support",
    ],
)

zkx_cc_library(
    name = "fusion_analysis_cache",
    srcs = ["fusion_analysis_cache.cc"],
    hdrs = ["fusion_analysis_cache.h"],
    deps = [
        "//zkx/hlo/ir:hlo",
        "//zkx/service/gpu:hlo_fusion_analysis",
        "//zkx/stream_executor:device_description",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:node_hash_map",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_library(
    name = "gpu_hlo_cost_analysis",
    srcs = ["gpu_hlo_cost_analysis.cc"],
    hdrs = ["gpu_hlo_cost_analysis.h"],
    deps = [
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:shape_util",
        "//zkx/hlo/ir:hlo",
        "//zkx/service:hlo_cost_analysis",
        "//zkx/service:hlo_module_config",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "gpu_performance_model",
    srcs = ["gpu_performance_model.cc"],
    hdrs = ["gpu_performance_model.h"],
    deps = [
        ":coalescing_analysis",
        ":gpu_hlo_cost_analysis",
        ":gpu_performance_model_base",
        "//zkx:util",
        "//zkx/hlo/ir:hlo",
        "//zkx/service/gpu:backend_configs_cc_proto",
        "//zkx/service/gpu:hlo_fusion_analysis",
        "//zkx/service/gpu:launch_dimensions",
        "//zkx/stream_executor:device_description",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/types:span",
        "@llvm-project//llvm:Support",
    ],
)

zkx_cc_library(
    name = "gpu_performance_model_base",
    srcs = ["gpu_performance_model_base.cc"],
    hdrs = ["gpu_performance_model_base.h"],
    deps = [
        ":fusion_analysis_cache",
        ":gpu_hlo_cost_analysis",
        "//zkx:shape_util",
        "//zkx:util",
        "//zkx/backends/gpu/codegen:fusion_emitter",
        "//zkx/backends/gpu/codegen:fusions",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/utils:hlo_traversal",
        "//zkx/service/gpu:hlo_fusion_analysis",
        "//zkx/service/gpu:launch_dimensions",
        "//zkx/stream_executor:device_description",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/time",
    ],
)
