# Copyright 2025 The ZKX Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("//bazel:zkx_cc.bzl", "zkx_cc_library")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "fusion_wrapper",
    srcs = ["fusion_wrapper.cc"],
    hdrs = ["fusion_wrapper.h"],
    deps = [
        "//xla/tsl/platform:errors",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/ir:hlo_opcode",
        "//zkx/hlo/pass:hlo_pass_interface",
        "//zkx/service/gpu:gpu_fusible",
        "//zkx/stream_executor:device_description",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "layout_assignment",
    srcs = ["layout_assignment.cc"],
    hdrs = ["layout_assignment.h"],
    deps = [
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/pass:hlo_pass_interface",
        "//zkx/service:computation_layout",
        "//zkx/stream_executor:device_description",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status:statusor",
    ],
)

zkx_cc_library(
    name = "multi_output_fusion",
    srcs = ["multi_output_fusion.cc"],
    hdrs = ["multi_output_fusion.h"],
    deps = [
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:debug_options_flags",
        "//zkx:shape_util",
        "//zkx/hlo/analysis:hlo_reachability",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/ir:hlo_opcode",
        "//zkx/hlo/pass:hlo_pass_interface",
        "//zkx/service:hlo_cost_analysis",
        "//zkx/service:instruction_fusion",
        "//zkx/service/gpu:gpu_fusible",
        "//zkx/service/gpu/model:gpu_hlo_cost_analysis",
        "//zkx/service/gpu/model:gpu_performance_model",
        "//zkx/service/gpu/model:gpu_performance_model_base",
        "//zkx/stream_executor:device_description",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

zkx_cc_library(
    name = "priority_fusion",
    srcs = ["priority_fusion.cc"],
    hdrs = ["priority_fusion.h"],
    deps = [
        "//xla/tsl/platform:env",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:debug_options_flags",
        "//zkx:shape_util",
        "//zkx:util",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/ir:hlo_opcode",
        "//zkx/hlo/pass:hlo_pass_interface",
        "//zkx/hlo/utils:hlo_traversal",
        "//zkx/service:dump",
        "//zkx/service:hlo_cost_analysis",
        "//zkx/service:instruction_fusion",
        "//zkx/service/gpu:backend_configs_cc_proto",
        "//zkx/service/gpu:gpu_fusible",
        "//zkx/service/gpu:hlo_fusion_analysis",
        "//zkx/service/gpu:ir_emission_utils",
        "//zkx/service/gpu/model:fusion_analysis_cache",
        "//zkx/service/gpu/model:gpu_hlo_cost_analysis",
        "//zkx/service/gpu/model:gpu_performance_model",
        "//zkx/service/gpu/model:gpu_performance_model_base",
        "//zkx/stream_executor:device_description",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/time",
        "@llvm-project//llvm:Support",
    ],
)

zkx_cc_library(
    name = "variadic_op_splitter",
    srcs = ["variadic_op_splitter.cc"],
    hdrs = ["variadic_op_splitter.h"],
    deps = [
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "//zkx:shape_util",
        "//zkx:util",
        "//zkx/hlo/ir:hlo",
        "//zkx/hlo/ir:hlo_opcode",
        "//zkx/hlo/pass:hlo_pass_interface",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
    ],
)
